--- a/index.html
+++ b/index.html
@@ -7,8 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>World Clock</h1>
-    <footer>This project was coded by <a href="" target="_blank">Doménica Criollo</a> and is open sourced on <a href="" target="_blank">Github</a>.</footer>
+    <div class="container">
+        <h1>World Clock</h1>
+        <select>
+            <option value="Select a city..."></option>
+            <option value=>Quito</option>
+            <option value=>London</option>
+            <option value=>New York</option>
+        </select>
+
+        <div class="city">
+            <h2>Los Angeles 🗼</h2>
+            <div class="date"> August, 15th 2025</div>
+            <div class="time">1:48:15</div>
+        </div>
+        <div class="city">
+            <h2>Sudney 🌆</h2>
+            <div class="date"> August, 15th 2025</div>
+            <div class="time">1:48:15</div>
+        </div>
+    </div>
+    
+    <footer>This project was coded with 💕 by Doménica Criollo</a> and is open sourced on <a href="https://github.com/DomeC99/World-clock" target="_blank">Github</a>.</footer>
     <script src="index.js"></script>
 </body>
 </html>
