--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
             </select>
 
             <div class="city">
-                <h2>Los Angeles 🗼</h2>
-                <div class="date"> August, 15th 2025</div>
+                <div>
+                    <h2>Los Angeles 🗼</h2>
+                    <div class="date"> August, 15th 2025</div>
+                </div>
                 <div class="time">1:48:15 <small>AM</small></div>
             </div>
             <div class="city">
-                <h2>Sidney 🌆</h2>
-                <div class="date"> August, 15th 2025</div>
+                <div>
+                    <h2>Sidney 🌆</h2>
+                    <div class="date"> August, 15th 2025</div>
+                </div>
                 <div class="time">1:48:15 <small>AM</small></div>
             </div>
         </div>
