Added Multiple Locations

--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
             <h1>World Clock</h1>
             <select id="select">
                 <option value="">Select a city...</option>
-                <option value="">Quito</option>
-                <option value="">London</option>
-                <option value="">New York</option>
+                <option value="America/Bogota">Bogota</option>
+                <option value="Europe/London">London</option>
+                <option value="America/New_York">New York</option>
             </select>
-
-            <div class="city" id="LosAngeles">
-                <div>
-                    <h2>Los Angeles 🗼</h2>
-                    <div class="date"></div>
+            <div id="cities">
+                <div class="city" id="LosAngeles">
+                    <div>
+                        <h2>Los Angeles 🗼</h2>
+                        <div class="date"></div>
+                    </div>
+                    <div class="time"></div>
                 </div>
-                <div class="time"></div>
-            </div>
-            <div class="city" id="Sydney">
-                <div>
-                    <h2>Sidney 🌆</h2>
-                    <div class="date"></div>
+                <div class="city" id="Sydney">
+                    <div>
+                        <h2>Sidney 🌆</h2>
+                        <div class="date"></div>
+                    </div>
+                    <div class="time"></div>
                 </div>
-                <div class="time"></div>
             </div>
         </div>
-        
     </div>
     
     <footer>This project was coded with 💕 by <strong>Doménica Criollo</strong> and is open sourced on <a href="https://github.com/DomeC99/World-clock" target="_blank">Github</a>.</footer>
