--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <h1>World Clock</h1>
             <select id="select">
                 <option value="">Select a city...</option>
-                <option value="America/Bogota">Bogota</option>
+                <option value="current">My current location</option>
+                <option value="America/Lima">Lima</option>
                 <option value="Europe/London">London</option>
                 <option value="America/New_York">New York</option>
             </select>
