Added cities and improving styles

--- a/index.html
+++ b/index.html
@@ -20,21 +20,30 @@
             <select id="select">
                 <option value="">Select a city...</option>
                 <option value="current">My current location</option>
+                <option value="Europe/Moscow">Moscow</option>
                 <option value="America/Lima">Lima</option>
                 <option value="Europe/London">London</option>
+                <option value="Asia/Shanghai">Shanghai</option>
                 <option value="America/New_York">New York</option>
             </select>
             <div id="cities">
                 <div class="city" id="LosAngeles">
                     <div>
-                        <h2>Los Angeles 🗼</h2>
+                        <h2>Los Angeles 🎢</h2>
                         <div class="date"></div>
                     </div>
                     <div class="time"></div>
                 </div>
                 <div class="city" id="Sydney">
                     <div>
-                        <h2>Sidney 🌆</h2>
+                        <h2>Sydney 🌆</h2>
+                        <div class="date"></div>
+                    </div>
+                    <div class="time"></div>
+                </div>
+                <div class="city" id="Paris">
+                    <div>
+                        <h2>Paris 🗼</h2>
                         <div class="date"></div>
                     </div>
                     <div class="time"></div>
@@ -43,7 +52,7 @@
         </div>
     </div>
     
-    <footer>This project was coded with 💕 by <strong>Doménica Criollo</strong> and is open sourced on <a href="https://github.com/DomeC99/World-clock" target="_blank">Github</a>.</footer>
+    <footer>This project was coded with 💕 by <strong>Doménica Criollo</strong> and is open sourced on<a href="https://github.com/DomeC99/World-clock" target="_blank">Github</a>.</footer>
     <script src="index.js"></script>
 </body>
 </html>
